--- a/css/_blogs.scss
+++ b/css/_blogs.scss
@@ -33,30 +33,52 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
+            padding: 0 10px;
 
-            // padding: 20px 50px;
+            @include respond-below(lg) {
+                margin: 0 0 30px 0;
+            }
+
+            @include respond-below(md) {
+                margin: 0 0 30px 0;
+            }
+
             .caption {
                 display: flex;
                 gap: 20px;
+                padding: 0 10px;
 
                 h6 {
                     color: #fff;
+                    font-family: sans-serif !important;
+                    text-transform: capitalize;
                 }
 
                 p {
                     color: #7c7979;
+                    margin: 0;
                 }
             }
-            h4{
+
+            h4 {
                 color: #101010;
             }
-            p{
+
+            h5 {
+                font-size: 20px;
+                font-family: sans-serif !important;
                 text-align: left;
                 color: #fff;
+                padding: 5px 10px 20px 10px;
             }
-            a{
+
+            a {
                 text-decoration: none;
-                color: rgb(209, 35, 35);
+                color: $brand-color;
+                padding: 5px 15px;
+                border: 1px solid;
+                margin: 0 10px;
+                border-radius: 3px;
             }
 
 
@@ -75,22 +97,15 @@
         position: relative;
         float: left;
         overflow: hidden;
-        margin: 10px 1%;
+        margin: 10px 1% 20px 1%;
         min-width: 320px;
-        // max-width: 480px;
-        // max-height: 360px;
-        height: 450px;
+        height: auto;
         width: 100%;
-        background: #3085a3;
         text-align: center;
         cursor: pointer;
 
-        @include respond-below(lg) {
-            height: 360px;
-        }
-
         @include respond-below(sm) {
-            height: 360px;
+            overflow: unset !important;
         }
 
 
@@ -101,7 +116,7 @@
         display: block;
         min-height: 100%;
         max-width: 100%;
-        opacity: 0.8;
+        opacity: 1;
     }
 
     .grid figure figcaption {
@@ -167,11 +182,11 @@
         max-width: none;
         width: -webkit-calc(100% + 50px);
         width: calc(100% + 50px);
-        opacity: 0.7;
+        opacity: 1;
         -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
         transition: opacity 0.35s, transform 0.35s;
-        -webkit-transform: translate3d(-40px, 0, 0);
-        transform: translate3d(-40px, 0, 0);
+        -webkit-transform: translate3d(-20px, 0, 0);
+        transform: translate3d(-20px, 0, 0);
     }
 
     figure.effect-lily figcaption {
