--- a/css/_header.scss
+++ b/css/_header.scss
@@ -51,6 +51,20 @@
             }
         }
     }
+
+    .shape {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+
+        img {
+            width: 100%;
+            height: auto;
+            opacity: 0.5;
+        }
+    }
 }
 
 .header {
@@ -408,6 +422,7 @@
             max-width: 100%;
         }
     }
+
 
 
 }
