--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,18 @@ h6 {
 .header-top-area .head-top-contacts ul li a:hover {
   text-decoration: none;
 }
+.header-top-area .shape {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+.header-top-area .shape img {
+  width: 100%;
+  height: auto;
+  opacity: 0.5;
+}
 
 .header {
   padding: 0 !important;
@@ -4689,4 +4701,79 @@ section {
 }
 .youtube-video-area .vdo-area .video-content video h6 {
   color: #fff;
+}
+
+.title-banner-area {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20%;
+  position: relative;
+}
+@media (max-width: 1199px) {
+  .title-banner-area {
+    padding: 200px 50px;
+    height: auto;
+  }
+}
+@media (max-width: 991px) {
+  .title-banner-area {
+    padding: 200px 20px;
+    height: auto;
+  }
+}
+@media (max-width: 639px) {
+  .title-banner-area {
+    padding: 100px 20px;
+    height: auto;
+  }
+}
+.title-banner-area h1 {
+  font-size: 5rem;
+  color: #fff;
+  font-weight: 400;
+  color: white;
+  text-align: center;
+  line-height: 100px;
+  font-size: 4rem !important;
+}
+@media (max-width: 1599px) {
+  .title-banner-area h1 {
+    font-size: 4.2rem;
+  }
+}
+@media (max-width: 1199px) {
+  .title-banner-area h1 {
+    font-size: 3.5rem;
+  }
+}
+@media (max-width: 991px) {
+  .title-banner-area h1 {
+    font-size: 2.9rem;
+  }
+}
+@media (max-width: 639px) {
+  .title-banner-area h1 {
+    font-size: 2.3rem;
+  }
+}
+@media (max-width: 1199px) {
+  .title-banner-area h1 {
+    line-height: 90px;
+    font-size: 3rem !important;
+  }
+}
+@media (max-width: 991px) {
+  .title-banner-area h1 {
+    line-height: 90px;
+    font-size: 3rem !important;
+  }
+}
+@media (max-width: 639px) {
+  .title-banner-area h1 {
+    line-height: 60px;
+    font-size: 2rem !important;
+  }
 }/*# sourceMappingURL=main.css.map */
