--- a/css/_difference.scss
+++ b/css/_difference.scss
@@ -1,5 +1,6 @@
 .difference-area {
     @include section;
+    position: relative;
 
     .contents {
         margin: 0 0 60px 0;
@@ -61,6 +62,21 @@
 
         p {
             color: #fff;
+        }
+    }
+
+    .shape {
+        position: absolute;
+        top: -50%;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+        opacity: .47;
+
+        img {
+            width: 100%;
+            height: auto;
+            opacity: 0.5;
         }
     }
 }
