--- a/css/_history.scss
+++ b/css/_history.scss
@@ -90,4 +90,18 @@
             }
         }
     }
+
+    .shape {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+
+        img {
+            width: 100%;
+            height: auto;
+            opacity: 0.2;
+        }
+    }
 }
